# skillsync

./: .gitignore  AGENTS.md  README.md  pyproject.toml
skills/skill-manager/: SKILL.md  skill.meta.json
skills/skill-manager/scripts/: skillsync
src/skillsync/: __init__.py  cli.py
